Updates from Overleaf

--- a/SC2022/abstract.tex
+++ b/SC2022/abstract.tex
@@ -1,5 +1,9 @@
-The NUMA architecture accommodates the hardware trend of an increasing number of CPU cores. It requires the cooperation of memory allocators to achieve good performance for multithreaded applications. Unfortunately, none of the existing memory allocators can support the NUMA architecture well.
-This paper presents a novel memory allocator -- \NM{}, that is designed for the NUMA architecture. \NM{} is centered on a binding-based memory management. On top of it, \NM{} proposes a method called ``threads-shared incremental allocation'' to balance the performance benefits and memory overhead of transparent huge pages, and
-an ``origin-aware memory management'' to ensure the locality of memory allocations. 
-%It further introduced an interleaved heap to reduce the load imbalance among different nodes. 
-According to our extensive evaluation, \NM{} has the best performance among all evaluated allocators. It is running 15\% faster than the second-best allocator (mimalloc), and 17\% faster than the default Linux allocator with reasonable memory overhead. For the best case, \NM{} achieves up to $2.9\times$ performance speedup compared to the default Linux allocator. \NM{} is also scalable to 128 threads and is ready for deployment.
+The NUMA architecture accommodates the hardware trend of an increasing number of CPU cores. It requires the cooperation of memory allocators to achieve good performance for multithreaded applications. Unfortunately, none of the existing allocators can support NUMA architecture well.
+This paper presents a novel memory allocator -- \NM{}, that is designed for the NUMA architecture. \NM{} is centered on a binding-based memory management. On top of it, \NM{} proposes an ``origin-aware memory management'' to ensure the locality of memory allocations and deallocations, as well as a method called ``incremental sharing'' to balance the performance benefits and memory overhead of using transparent huge pages.
+% On top of it, \NM{} proposes a method called ``incremental sharing'' to balance the performance benefits and memory overhead of using transparent huge pages, as well as an ``origin-aware memory management'' to ensure the locality of memory allocations and deallocations. 
+% It further introduced an interleaved heap to reduce the load imbalance among different nodes and an efficient mechanism for object movement.
+% It further introduced origin-aware memory management to ensure the locality of memory allocations and an interleaved heap to reduce the load imbalance among different nodes. 
+% Evaluation results show that 
+According to our extensive evaluation, \NM{} has the best performance among all evaluated allocators, running 15\% faster than the second-best allocator (mimalloc), and 17\% faster than the default Linux allocator with reasonable memory overhead. 
+% For the best case, \NM{} achieves up to $6.8\times$ performance speedup compared to other allocators. 
+\NM{} is also scalable to 128 threads and is ready for deployment.
