--- a/SC2022/numalloc.tex
+++ b/SC2022/numalloc.tex
@@ -78,7 +78,7 @@
 \end{abstract}
 
 \begin{IEEEkeywords}
-Memory management, NUMA architecture, Memory allocator, Scalability
+Memory Management, NUMA Architecture, Memory Allocator
 \end{IEEEkeywords}
 
 \thispagestyle{plain}
@@ -92,7 +92,7 @@ Memory management, NUMA architecture, Memory allocator, Scalability
 \input{SC2022/relatedwork}
 \input{SC2022/conclusion}
 
-\todo{the number order of reference has a issue, check 49, 50 later}
+% \todo{the number order of reference has a issue, check 49, 50 later}
 
 \bibliographystyle{IEEEtranS}
 \bibliography{ref,emery,tongping}
