--- a/SC2022/ref.bib
+++ b/SC2022/ref.bib
@@ -332,6 +332,15 @@ url="http://dx.doi.org/10.1007/978-3-642-35606-3_24"
   year={1988}
 }
 
+@inproceedings{che2009rodinia,
+  title={Rodinia: A benchmark suite for heterogeneous computing},
+  author={Che, Shuai and Boyer, Michael and Meng, Jiayuan and Tarjan, David and Sheaffer, Jeremy W and Lee, Sang-Ha and Skadron, Kevin},
+  booktitle={2009 IEEE international symposium on workload characterization (IISWC)},
+  pages={44--54},
+  year={2009},
+  organization={Ieee}
+}
+
 @misc{hugepage,
   author = {William Cohen},
   title = {Examining Huge Pages or Transparent Huge Pages performance},
@@ -1437,6 +1446,28 @@ keywords = {scheduling, data placement, NUMA}
   title = {Huge pages},
   howpublished = {"\url{https://lwn.net/Articles/374424/}"},
   year={2010}
+}
+
+@inproceedings{Snmalloc,
+author = {Li\'{e}tar, Paul and Butler, Theodore and Clebsch, Sylvan and Drossopoulou, Sophia and Franco, Juliana and Parkinson, Matthew J. and Shamis, Alex and Wintersteiger, Christoph M. and Chisnall, David},
+title = {Snmalloc: A Message Passing Allocator},
+year = {2019},
+isbn = {9781450367226},
+publisher = {Association for Computing Machinery},
+url = {https://doi.org/10.1145/3315573.3329980},
+doi = {10.1145/3315573.3329980},
+booktitle = {Proceedings of the 2019 ACM SIGPLAN International Symposium on Memory Management},
+pages = {122–135},
+numpages = {14},
+keywords = {Memory allocation, message passing},
+location = {Phoenix, AZ, USA},
+series = {ISMM 2019}
+}
+@misc{autonumaissue,
+  author = {{Avi Kivity }},
+  title = {Automatic NUMA balancing may reduce performance},
+  howpublished = {\url{https://github.com/scylladb/scylla/issues/1120}},
+  year={2016}
 }
 
 @inproceedings{Cling,
