--- a/SC2022/discussion.tex
+++ b/SC2022/discussion.tex
@@ -5,7 +5,7 @@ This section describes some limitations of \NM{}. First, \NM{} may consume more 
 %As shown in Figure~\ref{fig:remoteAccess}, \NM{} significantly reduces the number of TLB misses by trading with medium memory consumption. 
 
 
-Second, \NM{}'s interleaved heap cannot always achieve the performance improvement due to the following reason. Although the interleaved heap may avoid memory controller congestion caused by concurrent accesses from multiple child threads, it introduces unnecessary overhead for the initial thread since it is forced to have some remote accesses. 
+Second, \NM{}'s interleaved heap cannot always achieve performance improvement due to the following reason. Although the interleaved heap may avoid memory controller congestion caused by concurrent accesses from multiple child threads, it introduces unnecessary overhead for the initial thread since it is forced to have some remote accesses. 
 %(2) Although \NM{} avoids the change of programs to utilize the interleaved heap, it imposes additional overhead to identify the callsites for potentially shared objects. 
 Therefore, users should decide whether to enable the interleaved heap or not. However, this is an easy task, since the interleaved heap may have a harmful impact when the serial phase is a big portion of the execution. Therefore, we think that this shortcoming is totally acceptable given its predictability. 
 
@@ -13,6 +13,9 @@ Therefore, users should decide whether to enable the interleaved heap or not. Ho
 %Based on our analysis, the memory consumption is caused by \NM{}'s bag mechanism, especially with transparent huge page support. Currently, \NM{} employs one MB as a bag, which indicates that objects of each size will occupy at least of 1 MB, when transparent huge page support is enabled. Further, \NM{}'s design achieves a fast lookup on the metadata, but will utilize more memory unfortunately. We will investigate whether reducing the size of a bag could help reduce the memory consumption in the future.
 
 %The second limitation is that \NM{} will crash less often by preallocating a huge chunk of memory from the OS in the beginning. If an invalid reference is landed within a pre-allocated range, a program will not crash, different from other allocators. Instead, \NM{} aims to achieve the high performance over the reliability. Therefore, we believe that this limitation is acceptable.  
+
+% \todo{How does this work when there are multiple OS processes (each with a bunch of threads) on the same machine?  Also, I’m concerned that this might conflict with other thread binding that the user might do, e.g., through OpenMP.  The paper does not seem to talk about these cases.}
+
 \begin{comment}
 \todo{NUMAalloc may not suitable for the situation for the system has thousands of threads. But maybe still okay, as these threads are balanced distributed to different nodes.
 
