--- a/SC2022/overview.tex
+++ b/SC2022/overview.tex
@@ -5,7 +5,7 @@
 This section discusses the NUMA architecture, existing OS support and common design of memory allocators.
 %for the NUMA architecture, and then discusses some common designs of existing memory allocators that are adopted by \NM{}.  
 
-\subsection{NUMA Architecture}
+\subsection{NUMA Architecture and OS Support}
 
 \label{sec:numa}
 
@@ -13,7 +13,9 @@ This section discusses the NUMA architecture, existing OS support and common des
 %Therefore, the performance bottleneck is the memory controller in many-core machines, since 
 %A task cannot proceed without getting its necessary data from the memory. 
 
-The Non-Uniform Memory Access (NUMA) architecture is to solve the scalability issue, due to its decentralized nature. Instead of making all cores wait for the same memory controller, the NUMA architecture typically is installed with multiple memory controllers, where a group of CPU cores has its memory controller (called a node). Due to multiple memory controllers, the contention for the memory controller could be largely reduced and therefore the scalability could be improved correspondingly. However, the NUMA architecture also suffers from multiple sources of performance degradations~\cite{Blagodurov:2011:CNC:2002181.2002182}, including \textit{Cache Contention}, \textit{Node Imbalance}, \textit{Interconnect Congestion}, and \textit{Remote Accesses}.  
+The Non-Uniform Memory Access (NUMA) architecture is to solve the scalability issue, due to its decentralized nature. Instead of making all cores wait for the same memory controller, the NUMA architecture typically is installed with multiple memory controllers, where a group of CPU cores has its memory controller (called a node). 
+Due to multiple memory controllers, the contention for the memory controller could be largely reduced and therefore the scalability could be improved correspondingly. However, applications running on the NUMA architecture may suffer from remote accesses~\cite{Blagodurov:2011:CNC:2002181.2002182}, where a thread accesses the memory in a remote note. Further, when multiple threads are accessing the memory in the same node, it may cause interconnect congestion and node imbalance~\cite{Blagodurov:2011:CNC:2002181.2002182}.  
+%including \textit{Cache Contention}, \textit{Node Imbalance}, \textit{Interconnect Congestion}, and \textit{Remote Accesses}.  
 
 %\textit{Cache Contention:} the NUMA architecture is prone to cache contention that multiple tasks may compete for the shared cache. Cache contention will introduce more serious performance issue if the data has to be loaded from a remote node. 
  
@@ -24,17 +26,17 @@ The Non-Uniform Memory Access (NUMA) architecture is to solve the scalability is
 %\textit{Remote Accesses:} In NUMA architecture, local nodes can be accessed with less latency than remote accesses. Therefore, it is important to reduce remote accesses to improve the performance.\\
 
 
-Based on the study~\cite{Blagodurov:2011:CNC:2002181.2002182}, node imbalance and interconnect congestion may have a more significant performance impact than cache contention and remote accesses. These performance issues cannot be solved by the hardware automatically. Software support is required to control the placement of tasks, physical pages, and objects to achieve optimal performance for multithreaded applications.
+%Based on the study~\cite{Blagodurov:2011:CNC:2002181.2002182}, node imbalance and interconnect congestion may have a more significant performance impact than cache contention and remote accesses. These performance issues cannot be solved by the hardware automatically. Software support is required to control the placement of tasks, physical pages, and objects to achieve optimal performance for multithreaded applications.
 
-\subsection{NUMA Support Inside OS} 
+%\subsection{NUMA Support Inside OS} 
 
-Operating System already supports the NUMA architecture, especially on task scheduling and physical memory allocation. For task scheduling support, the OS provides some system calls that allow users to bind a task to a specific node. For memory allocation, the OS provides system calls (e.g., \texttt{mbind}) to change memory allocation policy for a range of memory or for the whole process~\cite{lameter2013numa, diener2015locality}. However, those system calls still require programmers to specify the policy explicitly, which cannot, therefore, automatically provide the performance improvements. \NM{} relies on these existing system calls to manage memory allocations explicitly, as further described in Section~\ref{sec:implement}, but without changing the user program explicitly. Linux also supports Automatic NUMA balancing (AutoNUMA)~\cite{AutoNUMA1}, which migrates the tasks closer to the memory they are accessing. 
+Operating System already supports the NUMA architecture, especially on task scheduling and physical memory allocation. For task scheduling support, the OS provides some system calls that allow users to bind a task to a specific node. For memory allocation, the OS provides system calls (e.g., \texttt{mbind}) to change memory allocation policy for a range of memory or for the whole process~\cite{lameter2013numa, diener2015locality}. However, those system calls still require programmers to specify the policy explicitly, which cannot, therefore, automatically provide the performance improvements. \NM{} relies on these existing system calls to manage memory allocations, as further described in Section~\ref{sec:implement}, but without the need of changing user programs explicitly. Linux also supports Automatic NUMA balancing (AutoNUMA)~\cite{AutoNUMA1}, which migrates the tasks closer to the memory they are accessing. However, AutoNUMA may degrade the performance due to its unmap of the memory frequently~\cite{autonumaissue}, which cannot replace the NUMA-aware memory allocator. 
 
 \subsection{Common Designs of Memory Allocators}
 \label{sec:commondesign}
 
-Memory allocators share some common designs. First, most allocators manage objects differently based on the size of objects. For big objects, allocators may request objects from the OS directly and return them to the OS directly upon deallocation~\cite{Hoard}. On the other hand, small objects will be tracked in freelists based on size classes. Managing small objects can be further classified into multiple categories, such as sequential and BiBOP, where region-based allocators do not belong to general-purpose allocators~\cite{DieHarder, Gay:1998:MME:277650.277748}. \todo{?}
-%For region-based allocators, all objects within the same region are deallocated together~\cite{Gay:1998:MME:277650.277748}.  But region-based allocators do not belong to general-purpose allocators. 
+Memory allocators share some common designs. First, most allocators manage objects differently based on the size of objects. For big objects, allocators may request objects from the OS directly and return them to the OS directly upon deallocation~\cite{Hoard}. On the other hand, small objects will be tracked in freelists based on size classes. Managing small objects can be further classified into multiple categories, such as sequential, BiBOP and region-based, where region-based allocators do not belong to general-purpose allocators~\cite{DieHarder, Gay:1998:MME:277650.277748}.
+% For region-based allocators, all objects within the same region are deallocated together and do not belong to general-purpose allocators~\cite{DieHarder, Gay:1998:MME:277650.277748}. 
 For sequential allocators, subsequent memory allocations are satisfied in a continuous memory block~\cite{Cling}. BiBOP-style allocators, which stands for ``Big Bag of Pages''~\cite{hanson1980portable}, utilize one or multiple continuous pages as a ``bag'' that holds objects of the same size class. 
 Now many performance-oriented allocators~\cite{tcmalloc, jemalloc, Scalloc}, and most secure allocators~\cite{openbsd, DieHarder, FreeGuard, Guarder}, belong to this category. Second, to support multithreaded applications, modern allocators (e.g., TCMalloc) often implement the ``per-thread heap'' that tracks deallocated objects from the current thread~\cite{tcmallocnew}, where allocating objects from per-thread heaps do not need to acquire locks. Therefore, the per-thread heap is expected to reduce the contention between threads. When the number of objects or the size of freed objects of a per-thread heap is larger than a threshold, it will return objects to a common heap shared by multiple threads. \NM{} borrows these common designs in its implementation. 
 
